# toy-os

./: Cargo.toml  README.md
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  ports.rs  vga_buffer.rs
tests/: basic_boot.rs  stack_overflow.rs
