[package]
name = "toy_os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.8"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = { git = "https://github.com/rust-osdev/x86_64.git", rev = "d486e86666e4a1e06694137390d4109489103668" }

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33

[[test]]
name = "stack_overflow"
harness = false
